--- a/postgres.conf
+++ b/postgres.conf
@@ -3,3 +3,5 @@ listen_addresses = '*'
 fsync = off
 synchronous_commit = off
 shared_buffers = 256MB
+
+shared_preload_libraries = 'pg_stat_statements'
