--- a/postgres.conf
+++ b/postgres.conf
@@ -4,4 +4,10 @@ fsync = off
 synchronous_commit = off
 shared_buffers = 256MB
 
-effective_cache_size = 500MB
+effective_cache_size = 1000MB
+random_page_cost = 1
+work_mem = '32 MB'
+
+max_worker_processes = 2
+max_parallel_workers_per_gather = 1
+max_parallel_workers = 2
